connected podcast content to root host, no more jumping to cinergie.be and cinergie.lareponse.be

--- a/podcast/play/partial_body_scripts.html
+++ b/podcast/play/partial_body_scripts.html
@@ -12,46 +12,46 @@
 <script type="text/javascript">
 var sbiajaxurl = "https://podcastcinergie.amstram.be/wp-admin/admin-ajax.php";
 </script>
-<link rel="stylesheet" id="rs-plugin-settings-css" href="https://cinergie.lareponse.be/play/assets/rs6.css" type="text/css" media="all">
+<link rel="stylesheet" id="rs-plugin-settings-css" href="/podcast/play/assets/rs6.css" type="text/css" media="all">
 <style id="rs-plugin-settings-inline-css" type="text/css">
 #rs-demo-id {}
 </style>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/regenerator-runtime.min.js" id="regenerator-runtime-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/wp-polyfill.min.js" id="wp-polyfill-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/regenerator-runtime.min.js" id="regenerator-runtime-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/wp-polyfill.min.js" id="wp-polyfill-js"></script>
 <script type="text/javascript" id="contact-form-7-js-extra">
 /* <![CDATA[ */
 var wpcf7 = {"api":{"root":"https:\/\/podcastcinergie.amstram.be\/wp-json\/","namespace":"contact-form-7\/v1"}};
 /* ]]> */
 </script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/index.js" id="contact-form-7-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/index.js" id="contact-form-7-js"></script>
 <script type="text/javascript" id="oc_cb_js_fr-js-extra">
 /* <![CDATA[ */
 var oc_constants = {"ajaxurl":"https:\/\/podcastcinergie.amstram.be\/wp-admin\/admin-ajax.php"};
 /* ]]> */
 </script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/cookie-banner-frontend.min.js" id="oc_cb_js_fr-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/rbtools.min.js" defer="" async="" id="tp-tools-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/rs6.min.js" defer="" async="" id="revmin-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/core.min.js" id="jquery-ui-core-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/cookie-banner-frontend.min.js" id="oc_cb_js_fr-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/rbtools.min.js" defer="" async="" id="tp-tools-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/rs6.min.js" defer="" async="" id="revmin-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/core.min.js" id="jquery-ui-core-js"></script>
 <script type="text/javascript" id="qi-addons-for-elementor-script-js-extra">
 /* <![CDATA[ */
 var qodefQiAddonsGlobal = {"vars":{"adminBarHeight":0,"iconArrowLeft":"<svg  xmlns=\"http:\/\/www.w3.org\/2000\/svg\" xmlns:xlink=\"http:\/\/www.w3.org\/1999\/xlink\" x=\"0px\" y=\"0px\" viewBox=\"0 0 34.2 32.3\" xml:space=\"preserve\" style=\"stroke-width: 2;\"><line x1=\"0.5\" y1=\"16\" x2=\"33.5\" y2=\"16\"\/><line x1=\"0.3\" y1=\"16.5\" x2=\"16.2\" y2=\"0.7\"\/><line x1=\"0\" y1=\"15.4\" x2=\"16.2\" y2=\"31.6\"\/><\/svg>","iconArrowRight":"<svg  xmlns=\"http:\/\/www.w3.org\/2000\/svg\" xmlns:xlink=\"http:\/\/www.w3.org\/1999\/xlink\" x=\"0px\" y=\"0px\" viewBox=\"0 0 34.2 32.3\" xml:space=\"preserve\" style=\"stroke-width: 2;\"><line x1=\"0\" y1=\"16\" x2=\"33\" y2=\"16\"\/><line x1=\"17.3\" y1=\"0.7\" x2=\"33.2\" y2=\"16.5\"\/><line x1=\"17.3\" y1=\"31.6\" x2=\"33.5\" y2=\"15.4\"\/><\/svg>","iconClose":"<svg  xmlns=\"http:\/\/www.w3.org\/2000\/svg\" xmlns:xlink=\"http:\/\/www.w3.org\/1999\/xlink\" x=\"0px\" y=\"0px\" viewBox=\"0 0 9.1 9.1\" xml:space=\"preserve\"><g><path d=\"M8.5,0L9,0.6L5.1,4.5L9,8.5L8.5,9L4.5,5.1L0.6,9L0,8.5L4,4.5L0,0.6L0.6,0L4.5,4L8.5,0z\"\/><\/g><\/svg>"}};
 /* ]]> */
 </script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/main.min.js" id="qi-addons-for-elementor-script-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/perfect-scrollbar.jquery.min.js" id="perfect-scrollbar-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/hoverIntent.min.js" id="hoverIntent-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/js/jquery/jquery.easing.1.3.js" id="jquery-easing-1.3-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/modernizr.js" id="modernizr-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/js/tweenmax.min.js" id="tweenmax-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/mediaelement-and-player.js" id="mediaelement-player-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/mediaelement-jump-forward.js" id="mediaelement-jump-forward-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/mediaelement-skip-back.js" id="mediaelement-skip-back-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/main.min(2).js" id="resonator-main-js-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/resonator-core.min.js" id="resonator-core-script-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/js/jquery/jquery.waitforimages.js" id="jquery-waitforimages-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/js/jquery/jquery.appear.js" id="jquery-appear-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/swiper.min.js" id="swiper-js"></script>
-<script type="text/javascript" src="https://cinergie.lareponse.be/js/jquery/jquery.magnific-popup.min.js" id="jquery-magnific-popup-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/main.min.js" id="qi-addons-for-elementor-script-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/perfect-scrollbar.jquery.min.js" id="perfect-scrollbar-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/hoverIntent.min.js" id="hoverIntent-js"></script>
+<script type="text/javascript" src="/podcast/js/jquery/jquery.easing.1.3.js" id="jquery-easing-1.3-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/modernizr.js" id="modernizr-js"></script>
+<script type="text/javascript" src="/podcast/js/tweenmax.min.js" id="tweenmax-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/mediaelement-and-player.js" id="mediaelement-player-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/mediaelement-jump-forward.js" id="mediaelement-jump-forward-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/mediaelement-skip-back.js" id="mediaelement-skip-back-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/main.min(2).js" id="resonator-main-js-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/resonator-core.min.js" id="resonator-core-script-js"></script>
+<script type="text/javascript" src="/podcast/js/jquery/jquery.waitforimages.js" id="jquery-waitforimages-js"></script>
+<script type="text/javascript" src="/podcast/js/jquery/jquery.appear.js" id="jquery-appear-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/swiper.min.js" id="swiper-js"></script>
+<script type="text/javascript" src="/podcast/js/jquery/jquery.magnific-popup.min.js" id="jquery-magnific-popup-js"></script>
 
-<script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/sbi-scripts.min.js" id="sb_instagram_scripts-js"></script>
+<script type="text/javascript" src="/podcast/play/assets/sbi-scripts.min.js" id="sb_instagram_scripts-js"></script>
