--- a/podcast/play/partial_fullscreen-area.html
+++ b/podcast/play/partial_fullscreen-area.html
@@ -11,10 +11,10 @@
     <h5 class="qodef-widget-title">Nos réseaux</h5>
     <div class="qodef-social-icons-group">
 
-      <a itemprop="url" href="https://www.facebook.com/cinergie.be" target="_blank"><img src="https://cinergie.lareponse.be/facebook.png" width="64" height="64"> </a>
-      <a itemprop="url" href="https://twitter.com/Cinergie/" target="_blank"><img src="https://cinergie.lareponse.be/twitter.png" width="64" height="64"> </a>
-      <a itemprop="url" href="https://www.instagram.com/cinergie.be" target="_blank"><img src="https://cinergie.lareponse.be/instagram.png" width="64" height="64"> </a>
-      <a itemprop="url" href="https://www.youtube.com/channel/UCyKdwOw0TYnSUL_vZ1BJ7jA" target="_blank"><img src="https://cinergie.lareponse.be/youtube.png" width="64" height="64"> </a>
+      <a itemprop="url" href="https://www.facebook.com/cinergie.be" target="_blank"><img src="/podcast/facebook.png" width="64" height="64"> </a>
+      <a itemprop="url" href="https://twitter.com/Cinergie/" target="_blank"><img src="/podcast/twitter.png" width="64" height="64"> </a>
+      <a itemprop="url" href="https://www.instagram.com/cinergie.be" target="_blank"><img src="/podcast/instagram.png" width="64" height="64"> </a>
+      <a itemprop="url" href="https://www.youtube.com/channel/UCyKdwOw0TYnSUL_vZ1BJ7jA" target="_blank"><img src="/podcast/youtube.png" width="64" height="64"> </a>
 
     </div>
   </div>
