--- a/podcast/play/partial_head.html
+++ b/podcast/play/partial_head.html
@@ -12,17 +12,17 @@
   <link rel="icon" href="../favicon-1.png" sizes="32x32">
   <link rel="icon" href="../favicon-1.png" sizes="192x192">
   <link rel="apple-touch-icon" href="../favicon-1.png">
-  <link rel="stylesheet" id="sb_instagram_styles-css" href="https://cinergie.lareponse.be/play/assets/sbi-styles.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="sb_instagram_styles-css" href="/podcast/play/assets/sbi-styles.min.css" type="text/css" media="all">
   <script src="https://kit.fontawesome.com/4f62929389.js" crossorigin="anonymous"></script>
-  <!-- <link rel="stylesheet" id="font-awesome-css" href="https://cinergie.lareponse.be/css/fontawesome/css/all.min.css" type="text/css" media="all"> -->
-  <link rel="stylesheet" id="wp-block-library-css" href="https://cinergie.lareponse.be/play/assets/style.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="ctf_styles-css" href="https://cinergie.lareponse.be/play/assets/ctf-styles.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="oc_cb_css_fr-css" href="https://cinergie.lareponse.be/play/assets/cookie-banner-frontend.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="swiper-css" href="https://cinergie.lareponse.be/play/assets/swiper.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="qi-addons-for-elementor-grid-style-css" href="https://cinergie.lareponse.be/play/assets/grid.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="qi-addons-for-elementor-helper-parts-style-css" href="https://cinergie.lareponse.be/play/assets/helper-parts.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="resonator-main-css" href="https://cinergie.lareponse.be/play/assets/main.min(1).css" type="text/css" media="all">
-  <link rel="stylesheet" id="resonator-core-style-css" href="https://cinergie.lareponse.be/play/assets/resonator-core.min.css" type="text/css" media="all">
+  <!-- <link rel="stylesheet" id="font-awesome-css" href="/podcast/css/fontawesome/css/all.min.css" type="text/css" media="all"> -->
+  <link rel="stylesheet" id="wp-block-library-css" href="/podcast/play/assets/style.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="ctf_styles-css" href="/podcast/play/assets/ctf-styles.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="oc_cb_css_fr-css" href="/podcast/play/assets/cookie-banner-frontend.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="swiper-css" href="/podcast/play/assets/swiper.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="qi-addons-for-elementor-grid-style-css" href="/podcast/play/assets/grid.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="qi-addons-for-elementor-helper-parts-style-css" href="/podcast/play/assets/helper-parts.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="resonator-main-css" href="/podcast/play/assets/main.min(1).css" type="text/css" media="all">
+  <link rel="stylesheet" id="resonator-core-style-css" href="/podcast/play/assets/resonator-core.min.css" type="text/css" media="all">
   <style id="resonator-style-inline-css" type="text/css">
     #qodef-page-outer {
       margin-top: -100px;
@@ -74,15 +74,15 @@
       background-color: rgba(94, 94, 94, 0);
     }
   </style>
-  <link rel="stylesheet" id="resonator-core-elementor-css" href="https://cinergie.lareponse.be/play/assets/elementor.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="elementor-frontend-css" href="https://cinergie.lareponse.be/play/assets/frontend.min.css" type="text/css" media="all">
-  <link rel="stylesheet" id="elementor-frontend-inline-css" href="https://cinergie.lareponse.be/play/assets/frontend-inline.css"  type="text/css">
+  <link rel="stylesheet" id="resonator-core-elementor-css" href="/podcast/play/assets/elementor.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="elementor-frontend-css" href="/podcast/play/assets/frontend.min.css" type="text/css" media="all">
+  <link rel="stylesheet" id="elementor-frontend-inline-css" href="/podcast/play/assets/frontend-inline.css"  type="text/css">
 
-  <link rel="stylesheet" href="https://cinergie.lareponse.be/css/glaneuses.css" type="text/css" media="all">
+  <link rel="stylesheet" href="/podcast/css/glaneuses.css" type="text/css" media="all">
 
-  <script type="text/javascript" src="https://cinergie.lareponse.be/js/jquery/jquery.min.js" id="jquery-core-js"></script>
-  <script type="text/javascript" src="https://cinergie.lareponse.be/js/jquery/jquery-migrate.min.js" id="jquery-migrate-js"></script>
-  <!-- <script type="text/javascript" src="https://cinergie.lareponse.be/play/assets/v4-shims.min.js" id="font-awesome-4-shim-js"></script> -->
+  <script type="text/javascript" src="/podcast/js/jquery/jquery.min.js" id="jquery-core-js"></script>
+  <script type="text/javascript" src="/podcast/js/jquery/jquery-migrate.min.js" id="jquery-migrate-js"></script>
+  <!-- <script type="text/javascript" src="/podcast/play/assets/v4-shims.min.js" id="font-awesome-4-shim-js"></script> -->
 
 
 
