--- a/podcast/play/partial_header_mobile.html
+++ b/podcast/play/partial_header_mobile.html
@@ -1,8 +1,8 @@
 <div id="qodef-page-mobile-header-inner" class="">
   <a itemprop="url" class="qodef-mobile-header-logo-link" href="../" style="height:200px" rel="home">
-    <img width="290" height="44" src="https://www.cinergie.be/images/logo-cinergie.png" class="qodef-header-logo-image qodef--main" alt="logo main" itemprop="image">
-    <img width="290" height="44" src="https://www.cinergie.be/images/logo-cinergie.png" class="qodef-header-logo-image qodef--dark" alt="logo dark" itemprop="image">
-    <img width="290" height="44" src="https://www.cinergie.be/images/logo-cinergie.png" class="qodef-header-logo-image qodef--light" alt="logo light" itemprop="image"></a><a href="javascript:void(0)"
+    <img width="290" height="44" src="/podcast/logo-cinergie.png" class="qodef-header-logo-image qodef--main" alt="logo main" itemprop="image">
+    <img width="290" height="44" src="/podcast/logo-cinergie.png" class="qodef-header-logo-image qodef--dark" alt="logo dark" itemprop="image">
+    <img width="290" height="44" src="/podcast/logo-cinergie.png" class="qodef-header-logo-image qodef--light" alt="logo light" itemprop="image"></a><a href="javascript:void(0)"
     class="qodef-opener-icon qodef-m qodef-source--predefined qodef-fullscreen-menu-opener">
     <span class="qodef-m-icon qodef--open">
       <span class="qodef-m-lines">
