--- a/podcast/play/partial_side_area.html
+++ b/podcast/play/partial_side_area.html
@@ -36,7 +36,7 @@
 
 
   <div id="qodef-side-area-inner">
-    <div id="media_image-2" class="widget widget_media_image" data-area="side-area"><img width="171" height="26" src="https://www.cinergie.be/images/logo-cinergie.png" class="image wp-image-4146  attachment-full size-full" alt="a" loading="lazy"
+    <div id="media_image-2" class="widget widget_media_image" data-area="side-area"><img width="171" height="26" src="/podcast/logo-cinergie.png" class="image wp-image-4146  attachment-full size-full" alt="a" loading="lazy"
         style="max-width: 100%; height: auto;"></div>
     <div id="resonator_core_separator-17" class="widget widget_resonator_core_separator" data-area="side-area">
       <div class="qodef-shortcode qodef-m  qodef-separator clear ">
@@ -68,10 +68,10 @@
       <h5 class="qodef-widget-title">Nos réseaux</h5>
       <div class="qodef-social-icons-group">
 
-        <a itemprop="url" href="https://www.facebook.com/cinergie.be" target="_blank"><img src="https://cinergie.lareponse.be/facebook.png" width="64" height="64"> </a>
-        <a itemprop="url" href="https://twitter.com/Cinergie/" target="_blank"><img src="https://cinergie.lareponse.be/twitter.png" width="64" height="64"> </a>
-        <a itemprop="url" href="https://www.instagram.com/cinergie.be" target="_blank"><img src="https://cinergie.lareponse.be/instagram.png" width="64" height="64"> </a>
-        <a itemprop="url" href="https://www.youtube.com/channel/UCyKdwOw0TYnSUL_vZ1BJ7jA" target="_blank"><img src="https://cinergie.lareponse.be/youtube.png" width="64" height="64"> </a>
+        <a itemprop="url" href="https://www.facebook.com/cinergie.be" target="_blank"><img src="/podcast/facebook.png" width="64" height="64"> </a>
+        <a itemprop="url" href="https://twitter.com/Cinergie/" target="_blank"><img src="/podcast/twitter.png" width="64" height="64"> </a>
+        <a itemprop="url" href="https://www.instagram.com/cinergie.be" target="_blank"><img src="/podcast/instagram.png" width="64" height="64"> </a>
+        <a itemprop="url" href="https://www.youtube.com/channel/UCyKdwOw0TYnSUL_vZ1BJ7jA" target="_blank"><img src="/podcast/youtube.png" width="64" height="64"> </a>
 
       </div>
     </div>
