--- a/podcast/play/partial_head.html
+++ b/podcast/play/partial_head.html
@@ -23,6 +23,10 @@
   <link rel="stylesheet" id="qi-addons-for-elementor-helper-parts-style-css" href="/podcast/play/assets/helper-parts.min.css" type="text/css" media="all">
   <link rel="stylesheet" id="resonator-main-css" href="/podcast/play/assets/main.min(1).css" type="text/css" media="all">
   <link rel="stylesheet" id="resonator-core-style-css" href="/podcast/play/assets/resonator-core.min.css" type="text/css" media="all">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+<!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
+
   <style id="resonator-style-inline-css" type="text/css">
     #qodef-page-outer {
       margin-top: -100px;
