--- a/podcast/play/partial_head.html
+++ b/podcast/play/partial_head.html
@@ -7,6 +7,7 @@
   <meta name="robots" content="max-image-preview:large">
 
   <link rel="alternate" type="application/rss+xml" title="Podcast Cinergie » Flux" href="https://feed.ausha.co/oRR8aix947Xp">
+  <link rel="canonical" href="https://www.cinergie.be" />
 
   <meta name="msapplication-TileImage" content="../favicon-1.png">
   <link rel="icon" href="../favicon-1.png" sizes="32x32">
